# hexlet-hello-world

./: pyproject.toml  ruff.toml
hexlet_hello_world/: __init__.py
hexlet_hello_world.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
my_application/: __init__.py
my_application/hexlet_hello_world.egg-info/: SOURCES.txt  entry_points.txt
my_application/scripts/: __init__.py  main.py  second_script.py
