[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "more-itertools>=10.6.0"
]

[project.scripts]
my-app = "my_application.scripts.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["my_application"]
exclude = ["hexlet_hello_world"]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

